Exported textures too dark when "View as Render" is on #65181

Closed
opened 2019-05-27 11:29:35 +02:00 by gobb_blend · 3 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.01

Blender Version
Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-26 22:34, hash: d525c76003
Worked: (optional)

Short description of error
Textures saved to disk from inside Blender end up looking too dark when "View as Render" is turned on the in the settings of the image editor.
This is potentially very dangerous because people can permanently ruin their textures this way. "View as Render" should only affect the way the image is displayed in Blender, but not the look of the actual image file that gets saved to disk.

Exact steps for others to reproduce the error
Create a texture inside of Blender or import any random texture into Blender, then save it to disk with "View as Render" set to true.
The texture has effectively been ruined.

textureexport_viewasrender.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.01 **Blender Version** Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-26 22:34, hash: `d525c76003` Worked: (optional) **Short description of error** Textures saved to disk from inside Blender end up looking too dark when "View as Render" is turned on the in the settings of the image editor. This is potentially very dangerous because people can permanently ruin their textures this way. "View as Render" should only affect the way the image is displayed in Blender, but not the look of the actual image file that gets saved to disk. **Exact steps for others to reproduce the error** Create a texture inside of Blender or import any random texture into Blender, then save it to disk with "View as Render" set to true. The texture has effectively been ruined. [textureexport_viewasrender.blend](https://archive.blender.org/developer/F7071765/textureexport_viewasrender.blend)
Author

Added subscriber: @gobb_blend

Added subscriber: @gobb_blend

This issue was referenced by 6ac20e9397

This issue was referenced by 6ac20e9397261848aec31b6ff3d84dd675cbc300

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65181
No description provided.