Fix T65181: image View as Render should not affect file saving